--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "main": "./lib/livefyre",
   "scripts": {
-    "test": "nodeunit test/*"
+    "test": "nodeunit test/**"
   },
   "dependencies": {
     "validator": "=3.5.0",
