--- a/package.json
+++ b/package.json
@@ -5,29 +5,31 @@
   "author": "Livefyre <tools@livefyre.com> (https://github.com/livefyre)",
   "homepage": "https://github.com/livefyre/livefyre-nodejs-utils",
   "repository": {
-    "type":"git",
+    "type": "git",
     "url": "https://github.com/livefyre/livefyre-nodejs-utils.git"
   },
-
   "directories": {
     "lib": "./lib"
   },
   "main": "./lib/livefyre",
   "scripts": {
-    "test": "nodeunit test/**"
+    "test": "nodeunit test/**",
+    "coveralls": "jscoverage lib && YOURPACKAGE_COVERAGE=1 nodeunit --reporter=lcov test/** | coveralls"
   },
   "dependencies": {
     "validator": "=3.5.0",
-    "restler":">=3.2.0",
-    "jwt-simple":"=0.2.0"
+    "restler": ">=3.2.0",
+    "jwt-simple": "=0.2.0",
+    "coveralls": "~2.11.2"
   },
   "devDependencies": {
-    "nodeunit": "0.8.6"
+    "nodeunit": "~0.9.0",
+    "jscoverage": "~0.5.8",
+    "coveralls": "~2.11.2"
   },
   "engines": {
     "node": ">= 0.10.x"
   },
-
   "readmeFilename": "README.md",
   "bugs": {
     "url": "https://github.com/livefyre/livefyre-nodejs-utils/issues"
