--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "main": "./lib/livefyre",
   "scripts": {
     "test": "nodeunit test/**",
-    "coveralls": "jscoverage lib && QUICKSORT_COV=1 nodeunit --reporter=lcov test | coveralls"
+    "coveralls": "jscoverage lib && QUICKSORT_COV=1 nodeunit --reporter=lcov test/** | coveralls"
   },
   "dependencies": {
     "validator": "=3.5.0",
