--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   },
   "main": "./lib/livefyre",
   "scripts": {
-    "test": "nodeunit test",
-    "coveralls": "jscoverage lib && YOURPACKAGE_COVERAGE=1 nodeunit --reporter=lcov test | coveralls"
+    "test": "nodeunit test/**",
+    "coveralls": "jscoverage lib && LIVEFYRE_COV=1 nodeunit --reporter=lcov test/** | coveralls"
   },
   "dependencies": {
     "validator": "=3.5.0",
