--- a/package.json
+++ b/package.json
@@ -17,10 +17,8 @@
     "coveralls": "jscoverage lib && LIVEFYRE_COV=1 nodeunit --reporter=lcov test/** | coveralls"
   },
   "dependencies": {
-    "validator": "=3.5.0",
     "restler": ">=3.2.0",
-    "jwt-simple": "=0.2.0",
-    "coveralls": "~2.11.2"
+    "jwt-simple": "=0.2.0"
   },
   "devDependencies": {
     "nodeunit": "~0.9.0",
