--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "livefyre",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "Livefyre NodeJS utility classes",
   "author": "Livefyre <tools@livefyre.com> (https://github.com/livefyre)",
   "homepage": "https://github.com/livefyre/livefyre-nodejs-utils",
@@ -17,6 +17,7 @@
     "coveralls": "jscoverage lib && LIVEFYRE_COV=1 nodeunit --reporter=lcov test/** | coveralls"
   },
   "dependencies": {
+    "validator": "=3.5.0",
     "restler": ">=3.2.0",
     "jwt-simple": "=0.2.0"
   },
