--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "coveralls": "jscoverage lib && LIVEFYRE_COV=1 nodeunit --reporter=lcov test/** | coveralls"
   },
   "dependencies": {
-    "validator": ">=3.5.0",
-    "restler": ">=3.2.0",
-    "jsonwebtoken": ">=5.0.0"
+    "validator": "^3.5.0",
+    "restler": "^3.2.0",
+    "jsonwebtoken": "^5.0.0"
   },
   "devDependencies": {
     "nodeunit": "~0.9.0",
